Додавй функціонал який відповідає за реалістичні обрахунки. Потрібно реалізувати дійсні обрахунки

--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,7 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+/WorkStintionJobSimulator1.1.zip
+/WorkStintionJobSimulator1.2.zip
+/WorkStintionJobSimulator1.3.zip
+/WorkStintionJobSimulator1.4.zip
