--- a/.gitignore
+++ b/.gitignore
@@ -365,3 +365,7 @@ FodyWeavers.xsd
 /WorkStintionJobSimulator1.2.zip
 /WorkStintionJobSimulator1.3.zip
 /WorkStintionJobSimulator1.4.zip
+/WorkStintionJobSimulator1.5.zip
+/WorkStintionJobSimulator1.6.zip
+/WorkStintionJobSimulator1.8.zip
+/WorkStintionJobSimulator1.7.zip
